# panda_trajectory_planning

./: .gitignore  .gitmodules  README.md
catkin_ws/src/franka_test/: CMakeLists.txt  package.xml
catkin_ws/src/franka_test/launch/: custom_setup.launch  spawn_mock_camera.launch  spawn_test_box.launch
catkin_ws/src/franka_test/models/marker/: model.config  model.sdf
catkin_ws/src/franka_test/models/mock_camera/: mock_camera.sdf
catkin_ws/src/franka_test/models/table/: table.sdf
catkin_ws/src/franka_test/models/test_box/: test_box.sdf
catkin_ws/src/franka_test/src/: CustomTrajectoryPlanner.py  PandaTransformations.py  PointWithOrientation.py  analyse_franka_data.py  move_franka.py  move_franka_advanced.py  move_franka_based_on_camera.py  test_new_control.py
catkin_ws/src/klemol_planner/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/klemol_planner/config/: joint_limits.yaml  planner_params.yaml
catkin_ws/src/klemol_planner/klemol_planner/camera_utils/: antipodal_grasp_planner2.py  camera_operations.py  capture_realsense_frame_yolo.py  (+1 more)
catkin_ws/src/klemol_planner/launch/: spawn_static_test_environment.launch
catkin_ws/src/klemol_planner/scripts/: 00_final_dynamic_demo.py  00_final_static_demo.py  approach_from_the_top.py  for_sim_move_franka_klemol_based_on_camera.py  franky_test.py  move_franka_klemol_based_on_camera.py  move_franka_klemol_combination.py  move_to_corners.py  object_detector.py  pick_static_banana_demo.py  plot_tool_poses_for_prm.py  test_camera_scrtipt_marcin.py
catkin_ws/src/klemol_planner/urdf/: table_box.urdf.xacro
(+105 files in other folders)
